Fix pattern library & fullscreen options not showing

--- a/Assets/Sass/components/_toolbar.scss
+++ b/Assets/Sass/components/_toolbar.scss
@@ -34,6 +34,11 @@
             flex: 0 1 auto;
             margin-right: 1.5em;
 
+            .is-visual-editor &,
+            .is-code-editor & {
+                display: block;
+            }
+
             .is-visual-editor &.when-visual-editor { display: block; }
             .is-visual-editor &.when-code-editor { display: none; }
             .is-code-editor &.when-code-editor { display: block; }
